# irc_server

./: .gitmodules  Cargo.toml  README.md  config.toml
src/: bridge.rs  config.rs  connection.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs  server.rs  user.rs
src/core/: command.rs  connection.rs  message.rs  mod.rs
src/irc_core/: channel.rs  command.rs  connection.rs  error.rs  message.rs  message_errors.rs  mod.rs  numeric.rs
tests/: test_commands.rs
