[package]
name = "irc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
bytes = {version = "1.8.0"}
log = {version = "0.4"}
env_logger = {version = "0.11"}
toml = "0.8.19"
serde = "1.0.215"
serde_derive = "1.0.215"
# tokio = "1.41.1"
# bytes = "1.8.0"
# log = "0.4.22"
# env_logger = "0.11.5"

[[bin]]
name = "server"
path = "src/bin/server.rs"
