[package]
name = "irc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
bytes = {version = "1.8.0"}
log = {version = "0.4"}
env_logger = {version = "0.11"}
toml = "0.8.19"
serde = "1.0.215"
serde_derive = "1.0.215"
once_cell = "1.21.3"
bitflags = "2.9.0"

[workspace]
members = [ "irc_proto"]

[dependencies.irc_proto]
path = "irc_proto"

[[bin]]
name = "server"
path = "src/bin/server.rs"
